--- a/style.css
+++ b/style.css
@@ -1,16 +1,46 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+body {
+    color: var(--tertiary-color);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  }
+  
+
 /* HEADER STYLES START */
 header {
-    background-color: blueviolet;
+    padding: 20px 35px;
+    background-color: rgb(241, 244, 242);
     display:flex;
     justify-content: space-between;
-    align-items: center;
+    flex-wrap: wrap;
+    position: sticky;
+    position: -webkit-sticky;
+    top:0;
 }
 
-header nav {
-background-color: coral;
+header nav a {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;   
+    font-size: 20px;
+    color: black;
+  }
+
+header h2 {
+    font-size: 48px;
+    color: black;
 }
 
 /* HEADER STYLES END */
+
+
 
 /* SECTION STYLES START */
 
