--- a/style.css
+++ b/style.css
@@ -119,11 +119,12 @@ section h2 {
   }
 
 
-.contact p {
+.contact a {
   line-height: 1.7;
   color: var(--tertiary-color);
   width: 80%;
   margin: 0 auto;
   font-size: 20px;
-  }
+  
+}
 
