--- a/style.css
+++ b/style.css
@@ -1,25 +1,24 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 body {
-    color: var(--tertiary-color);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-  }
-  
-
+  color: var(--tertiary-color);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
 /* HEADER/NAV BAR STYLES START */
+
 header {
-    padding: 20px 35px;
-    background-color: rgb(241, 244, 242);
-    display:flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    position: sticky;
-    position: -webkit-sticky;
-    top:0;
+  padding: 20px 35px;
+  background-color: rgb(241, 244, 242);
+  display:flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: sticky;
+  position: -webkit-sticky;
+  top:0;
 }
 
 header h1 {
@@ -27,7 +26,6 @@ header h1 {
   margin: 0;
   font-size: 36px;
   color: var(--primary-color);
-  
 }
 
 header nav {
@@ -35,27 +33,27 @@ header nav {
 }
 
 header nav a {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 10px 15px;
-    float: right;   
-    font-size: 20px;
-    color: black;
-    list-style: none;
-    text-decoration: none;
-    align-items: center;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px 15px;
+  float: left;   
+  font-size: 20px;
+  color: black;
+  list-style: none;
+  text-decoration: none;
+  align-items: center;
+}
 
-  header nav a:hover {
+header nav a:hover {
   color: inherit;
   text-decoration: underline 0.15em black;
   text-decoration-color: black;
-  }
+}
 
-  header h2 {
-    font-size: 48px;
-    color: black;
+header h2 {
+  font-size: 48px;
+  color: black;
 }
 /* HEADER/NAV BAR STYLES END */
 
@@ -91,7 +89,7 @@ section {
   align-items: center;
   justify-content: space-between;
 }
-  
+
 section h2 {
   font-size: 46px;
   flex: 1 30%;
@@ -100,7 +98,6 @@ section h2 {
 .section-info {
   flex: 2 70%;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
 }
 /* SECTION STYLES END */
@@ -112,8 +109,30 @@ section h2 {
   width: 80%;
   margin: 0 auto;
   font-size: 20px;
+  padding-left: 15px;
+}
+
+.about-me img {
+  max-height: 250px;
 }
 /* "ABOUT ME" STYLES END */
+
+/* "MY WORK" STYLES START */
+
+.horiseon {
+  height: 200px;
+  width: 600px;
+  background-image: url("images/horiseon.png");
+  background-size: cover;
+  background-position: center top;
+  display: block;
+  margin-right: 75px;
+  border: 5px solid rgb(241, 244, 242);
+}
+
+
+
+/* "MY WORK" STYLES END */
 
 /* "CONTACT" STYLES START */
 .contact a {
@@ -124,3 +143,4 @@ section h2 {
   font-size: 20px;  
 }
 /* "CONTACT" STYLES END */
+
