--- a/style.css
+++ b/style.css
@@ -5,14 +5,13 @@
 }
 
 body {
-  color: var(--tertiary-color);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: Arial, Helvetica, sans-serif;
 }
 /* HEADER/NAV BAR STYLES START */
 
 header {
   padding: 20px 35px;
-  background-color: rgb(241, 244, 242);
+  background-color: #f4f2ed;
   display:flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -59,7 +58,7 @@ header h2 {
 
 /* FOOTER STYLES START */
 footer {
-  background-color: rgb(241, 244, 242);
+  background-color: #f4f2ed;
   padding: 40px 35px;
   display: flex;
   justify-content: space-between;
@@ -113,7 +112,7 @@ section h2 {
 }
 
 .about-me img {
-  max-height: 250px;
+  max-height: 350px;
 }
 /* "ABOUT ME" STYLES END */
 
@@ -127,7 +126,7 @@ section h2 {
   background-position: center top;
   display: block;
   margin-right: 75px;
-  border: 5px solid rgb(241, 244, 242);
+  border: 5px solid #f4f2ed;
 }
 
 
