--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@
                                                                                                                                 line-height: 1.7;
                                                                                                                                 color: var(--tertiary-color);
                                                                                                                                 width: 100%;
-                                                                                                                                margin: 0 auto;
+                                                                                                                                margin-top: 50px;
                                                                                                                                 font-size: 20px;
                                                                                                                                 padding-left: 15px;
                                                                                                                             }
