--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
                                                                                                                             
                                                                                                                             header h1 {
                                                                                                                                 font-weight: bold;
-                                                                                                                                margin: 0;
+                                                                                                                                margin-top: 10px;
                                                                                                                                 font-size: 25px;
                                                                                                                                 color: var(--primary-color);
                                                                                                                             }
