--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@
                                                                                                                             .dinner-drinks-img  {
                                                                                                                                 height: 150px;
                                                                                                                                 width: 300px;
-                                                                                                                                background-image: url("images/dinner&drinks.png");
+                                                                                                                                background-image: url("images/dinner-drinks.png");
                                                                                                                                 background-size: cover;
                                                                                                                                 background-position: center;
                                                                                                                                 display: block;
