--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
                                                                                                                                 font-family: 'Raleway', sans-serif;
                                                                                                                                 background-color: #F5F1E7;
                                                                                                                             }
+
                                                                                                                             /* HEADER/NAV BAR STYLES */
-                                                                                                                            
                                                                                                                             header {
                                                                                                                                 padding: 20px 35px;
                                                                                                                                 margin-bottom: 5%;
@@ -53,7 +53,6 @@
                                                                                                                             }
                                                                                                                             
                                                                                                                             /* FOOTER STYLES  */
-                                                                                                                            
                                                                                                                             footer {
                                                                                                                                 background-color: #f4f2ed;
                                                                                                                                 padding: 40px 35px;
@@ -145,8 +144,7 @@
                                                                                                                                 font-size: 15px;
                                                                                                                             }
 
-                                                                                                                            /* RUN BUDDY */
-                                                                                                                            
+                                                                                                                            /* DINNER & DRINKS */
                                                                                                                             .dinner-drinks-img {
                                                                                                                                 height: 200px;
                                                                                                                                 width: 700px;
@@ -156,14 +154,15 @@
                                                                                                                                 display: block;
                                                                                                                                 margin-right: 0;
                                                                                                                                 margin-bottom: 10px;
+                                                                                                                                /* margin-top: 400px; */
                                                                                                                                 border: .5px solid black;
                                                                                                                             }
                                                                                                                             
                                                                                                                             .dinner-drinks-img:hover {
                                                                                                                                 opacity: .5;
                                                                                                                             }
+
                                                                                                                             /* HORISEON */
-                                                                                                                            
                                                                                                                             .horiseon-img {
                                                                                                                                 height: 150px;
                                                                                                                                 width: 345px;
@@ -180,8 +179,7 @@
                                                                                                                                 opacity: .5;
                                                                                                                             }
 
-                                                                                                                            /* DINNER & DRINKS */
-                                                                                                                            
+                                                                                                                            /* RUN BUDDY */
                                                                                                                             .run-buddy-img  {
                                                                                                                                 height: 150px;
                                                                                                                                 width: 345px;
@@ -198,7 +196,6 @@
 
                                                                                                                           
                                                                                                                             /* WEATHER DASHBOARD */
-                                                                                                                            
                                                                                                                             .weather-dashboard-img {
                                                                                                                                 height: 150px;
                                                                                                                                 width: 345px;
@@ -213,8 +210,8 @@
                                                                                                                             .weather-dashboard-img:hover {
                                                                                                                                 opacity: .5;
                                                                                                                             }
+
                                                                                                                             /* WORK DAY SCHEDULER  */
-                                                                                                                            
                                                                                                                             .work-day-scheduler-img {
                                                                                                                                 height: 150px;
                                                                                                                                 width: 345px;
@@ -235,7 +232,6 @@
                                                                                                                                 line-height: 1.7;
                                                                                                                                 color: var(--tertiary-color);
                                                                                                                                 width: 80%;
-                                                                                                                                margin: 0 auto;
                                                                                                                                 font-size: 15px;
                                                                                                                                 text-decoration:none
                                                                                                                             }
@@ -245,7 +241,6 @@
                                                                                                                             }
 
                                                                                                                             /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-                                                                                                                            
                                                                                                                             @media only screen and (max-width: 425px) {
                                                                                                                                 header {
                                                                                                                                     display: flex;
