--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
                                                                                                                             
                                                                                                                             body {
                                                                                                                                 font-family: 'Raleway', sans-serif;
+                                                                                                                                font-weight: bold;
                                                                                                                                 background-color: #F5F1E7;
                                                                                                                             }
 
                                                                                                                             /* HEADER/NAV BAR STYLES */
                                                                                                                             header {
+                                                                                                                                background-color: #F5F1E7;
                                                                                                                                 padding: 20px 35px;
                                                                                                                                 margin-bottom: 5%;
                                                                                                                                 display: flex;
@@ -110,10 +112,11 @@
                                                                                                                                 font-size: 15px;
                                                                                                                                 padding-left: 30px;
                                                                                                                                 text-align: center;
-                                                                                                                                line-height: 2;
+                                                                                                                        
                                                                                                                             }
                                                                                                                             
                                                                                                                             .about-me img {
+                                                                                                                                margin-left: 100px;
                                                                                                                                 max-height: 300px;
                                                                                                                                 max-width: 250px;
                                                                                                                             }
@@ -260,11 +263,11 @@
                                                                                                                                     flex: 0 0 100%;
                                                                                                                                     text-align: center;
                                                                                                                                 }
-                                                                                                                                .about-me img {
+                                                                                                                                /* .about-me img {
                                                                                                                                     margin-top: 10px;
                                                                                                                                     margin-left: 65px;
                                                                                                                                     margin-bottom: 10px;
-                                                                                                                                }
+                                                                                                                                } */
                                                                                                                                 .about-me h2 {
                                                                                                                                     flex: 0 0 100%;
                                                                                                                                     flex-direction: column;
@@ -284,19 +287,22 @@
                                                                                                                                     text-align: center;
                                                                                                                                 }
                                                                                                                                 .my-work {
+                                                                                                                                    padding: 2px;
+                                                                                                                                    margin-top: 600px;
                                                                                                                                     flex: 0 0 100%;
                                                                                                                                     flex-direction: column;
                                                                                                                                     text-align: center;
                                                                                                                                     width: 100%;
                                                                                                                                 }
                                                                                                                                 .container {
+                                                                                                                                    /* margin-top: 400px; */
                                                                                                                                     flex: 0 0 100%;
                                                                                                                                     flex-direction: column;
                                                                                                                                     align-items: center;
                                                                                                                                 }
-                                                                                                                                .run-buddy-img {
+                                                                                                                                .dinner-drinks-img {
                                                                                                                                     height: 150px;
-                                                                                                                                    width: 300px;
+                                                                                                                                    width: 350px;
                                                                                                                                 }
                                                                                                                                 .contact {
                                                                                                                                     margin-top: 550px;
