--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@
                                                                                                                             }
                                                                                                                             
                                                                                                                             /* FOOTER STYLES  */
-                                                                                                                            footer {
-                                                                                                                                background-color: #f4f2ed;
+                                                                                                                            .footer {
+                                                                                                                                background-color: #F5F1E7;
                                                                                                                                 padding: 40px 35px;
                                                                                                                                 display: flex;
                                                                                                                                 justify-content: space-between;
@@ -67,6 +67,7 @@
                                                                                                                             footer h5 {
                                                                                                                                 color: var(--secondary-color);
                                                                                                                                 font-size: 15px;
+                                                                                                                                font-weight: bold;
                                                                                                                                 margin: 0;
                                                                                                                             }
                                                                                                                             
