--- a/style.css
+++ b/style.css
@@ -88,11 +88,11 @@
                                                                                                                             }
                                                                                                                             
                                                                                                                             section h2 {
-                                                                                                                                font-size: 20px;
+                                                                                                                                font-size: 15px;
                                                                                                                                 flex: 0 0 30%;
                                                                                                                             }
                                                                                                                             
-                                                                                                                            section h4 {
+                                                                                                                            .contact h4 {
                                                                                                                                 font-size: 20px;
                                                                                                                                 flex: 0 0 30%;
                                                                                                                             }
@@ -108,6 +108,9 @@
                                                                                                                                 margin-bottom: 200px;
                                                                                                                             }
                                                                                                                             
+                                                                                                                            .about-me h2 {
+                                                                                                                                font-size: 20px;
+                                                                                                                            }
                                                                                                                             .about-me p {
                                                                                                                                 color: var(--tertiary-color);
                                                                                                                                 font-size: 15px;
@@ -123,6 +126,9 @@
                                                                                                                             }
 
                                                                                                                             /* "MY WORK" STYLES */
+                                                                                                                            .my-work h2 {
+                                                                                                                                font-size: 20px;
+                                                                                                                            }
                                                                                                                             .container {
                                                                                                                                 display: flex;
                                                                                                                                 flex-wrap: wrap;
